2007-10-09  David Bateman  <dbateman@free.fr>

	* input.cc (accept_line): Drop this function and remove automatic
	insertion of closing quotes as the transpose operator confuses it.
	(initialize_command_input): Remove accept_line from here as well.

	
2007-10-09  John W. Eaton  <jwe@octave.org>

	* ov-mapper.cc (octave_mapper::apply): If possible, use
	d_d_map_fcn to handle complex values which have imag(z) == 0.

	* DLD-FUNCTIONS/urlwrite.cc (Furlwrite, Furlread) [! HAVE_CURL]:
	Throw error instead of returning empty string hiding error message
	in third return value.
	(progress_func): Delete.
	(Furlread): Don't set progress callback for curl.
	(write_data, form_query_string, urlget): Now static.

2007-10-08  David Bateman  <dbateman@free.fr>

	*  input.cc (quoting_filename): Function to add a leading quote to
	a string if needed.
	(accept_line): Function to check if a string needs a closing quote
	before calling the rl_newline function.
	(initialize_command_input): Initialize completer_quote_characters,
	filename_quote_characters, quoting_function,
	user_accept_line_function.

	* data.cc (template <class T> static make_diag (...)): New
	template class version of make_diag. Make other make_diag
	functions depend on it.
	( static octave_value make_diag (const octave_value&, 
	octave_idx_type)): Treat all possible internal Octave types.

2007-10-08  John W. Eaton  <jwe@octave.org>

	* load-save.cc 	(save_vars, dump_octave_core):
	Don't pass INFNAN_WARNED to do_save.
	(do_save): Delete unused arg, INFNAN_WARNED.
	Don't pass INFNAN_WARNED to save_ascii_data.
	* ls-oct-ascii.cc (save_ascii_data_for_plotting):
	Don't pass INFNAN_WARNED to save_ascii.
	(save_ascii_data): Delete unused arg, INFNAN_WARNED.

	* ov.h (octave_value::save_ascii): Delete unused arg, INFNAN_WARNED.
	* ov-base-int.cc (octave_base_int_matrix<T>::save_ascii,
	octave_base_int_scalar<T>::save_ascii): Likewise.
	* ov-base-sparse.cc (octave_base_sparse<T>::save_ascii): Likewise.